objects/ASI_CRM_Order_Status__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Cancel_Qty__c</fullName>
        <label>Cancel Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_FOC_POSM_Line_No__c</fullName>
        <label>FOC/POSM Line No.</label>
        <referenceTo>ASI_FOC_Request_Item__c</referenceTo>
        <relationshipLabel>Order Status</relationshipLabel>
        <relationshipName>Order_Status</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_FOC_POSM_Request_No__c</fullName>
        <label>FOC/POSM Request No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JDE_Order_No__c</fullName>
        <label>JDE Order No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JDE_Order_Type__c</fullName>
        <label>JDE Order Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JDE_Update_Date_Time__c</fullName>
        <label>JDE Update Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Order_Date__c</fullName>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Reference_No__c</fullName>
        <label>Reference No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Request_Qty__c</fullName>
        <label>Request Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Shipped_Qty__c</fullName>
        <label>Shipped Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_Partial_Order__c</fullName>
        <formula>ASI_CRM_FOC_POSM_Line_No__r.ASI_FOC_Request_Quantity_Bottle__c !=  ASI_CRM_Shipped_Qty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partial Order</label>
        <type>Checkbox</type>
    </fields>
    <label>Order Status</label>
    <listViews>
        <fullName>ASI_CRM_TW_Order_Status</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_FOC_POSM_Line_No__c</columns>
        <columns>ASI_CRM_Reference_No__c</columns>
        <columns>ASI_CRM_Request_Qty__c</columns>
        <columns>ASI_CRM_Shipped_Qty__c</columns>
        <columns>ASI_CRM_Cancel_Qty__c</columns>
        <columns>ASI_CRM_Order_Date__c</columns>
        <columns>ASI_CRM_JDE_Order_No__c</columns>
        <columns>ASI_CRM_JDE_Order_Type__c</columns>
        <columns>ASI_CRM_JDE_Update_Date_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Order_Status__c.ASI_CRM_TW_Order_Status</value>
        </filters>
        <label>TW Order Status</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_TW_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OS-{00000000}</displayFormat>
        <label>Order Status No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Status</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_TW_Order_Status</fullName>
        <active>true</active>
        <label>ASI CRM TW Order Status</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>